--- a/WebApplication2.csproj
+++ b/WebApplication2.csproj
@@ -8,6 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="NSwag.ApiDescription.Client" Version="14.2.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
+    <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="14.2.0" />
+    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="14.2.0" />
+    <PackageReference Include="NSwag.Core" Version="14.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
